Bug 1059086 - Stop and start MTP server properly when USB cable is unplugged and replugged. r=Alphan